--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -12,6 +12,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
   <style>
+    :root{
+      --curve: #a3ec01;
+    }
+
     body.user-template-scope {
       --bg: #05070a;
       --panel: rgba(124, 37, 239, 0.10);
@@ -470,6 +474,31 @@
     body.user-template-scope .activity-list .notification-row:last-child {
       border-bottom: none;
     }
+
+    body.user-template-scope .greenCurve{
+      position: relative;
+      overflow: hidden;
+      border-radius: 16px;
+      min-height: 220px;
+      background: rgba(124, 37, 239, 0.10);
+      border: 1px solid rgba(124, 37, 239, 0.30);
+    }
+
+    body.user-template-scope .greenCurve__wave{
+      position: absolute;
+      left: -15%;
+      width: 130%;
+      bottom: -26px;
+      height: 58%;
+      opacity: 1;
+      pointer-events: none;
+      filter: drop-shadow(0 -18px 40px rgba(163, 236, 1, 0.18));
+    }
+
+    body.user-template-scope .greenCurve__fill{ opacity: .55; }
+    body.user-template-scope .greenCurve__stripes{ opacity: .14; }
+    body.user-template-scope .greenCurve__line{ opacity: .9; }
+    body.user-template-scope .greenCurve .stat-card-inner{ position: relative; z-index: 1; }
   </style>
 </head>
 <body class="user-template-scope">
@@ -711,84 +740,248 @@
         <div class="tab-pane fade show active" id="dashboard">
           <section class="stats-grid">
             <div class="glass-card glass-card-3d stat-card">
-              <div class="stat-card-inner">
-                <div class="stat-info">
-                  <h3>TOTAL REVENUE</h3>
-                  <div class="stat-value">$84,254</div>
-                  <span class="stat-change positive">
+              <div class="greenCurve">
+                <div class="stat-card-inner">
+                  <div class="stat-info">
+                    <h3>TOTAL REVENUE</h3>
+                    <div class="stat-value">$84,254</div>
+                    <span class="stat-change positive">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      </svg>
+                      +12.5%
+                    </span>
+                  </div>
+                  <div class="stat-icon revenue">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      <path d="M12 1v22"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
                     </svg>
-                    +12.5%
-                  </span>
+                  </div>
                 </div>
-                <div class="stat-icon revenue">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M12 1v22"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
-                  </svg>
-                </div>
+                <svg class="greenCurve__wave" viewBox="0 0 1000 400" preserveAspectRatio="none" aria-hidden="true">
+                  <defs>
+                    <linearGradient id="gc-waveFill-1" x1="0" y1="0" x2="0" y2="1">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0;"/>
+                      <stop offset="55%" style="stop-color: var(--curve); stop-opacity: 0.10;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <linearGradient id="gc-waveLine-1" x1="0" y1="0" x2="1" y2="0">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0.35;"/>
+                      <stop offset="45%" style="stop-color: var(--curve); stop-opacity: 0.95;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <pattern id="gc-diag-1" width="14" height="14" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
+                      <rect x="0" y="0" width="6" height="14" style="fill: var(--curve); opacity: 1;"/>
+                    </pattern>
+                    <clipPath id="gc-waveClip-1">
+                      <path d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"/>
+                    </clipPath>
+                  </defs>
+                  <path class="greenCurve__fill"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"
+                        fill="url(#gc-waveFill-1)"/>
+                  <rect class="greenCurve__stripes"
+                        x="0" y="0" width="1000" height="400"
+                        fill="url(#gc-diag-1)"
+                        clip-path="url(#gc-waveClip-1)"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        stroke="url(#gc-waveLine-1)"
+                        stroke-width="8"
+                        stroke-linecap="round"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        style="stroke: var(--curve); stroke-opacity: 0.35;"
+                        stroke-width="14"
+                        stroke-linecap="round"/>
+                </svg>
               </div>
             </div>
             <div class="glass-card glass-card-3d stat-card">
-              <div class="stat-card-inner">
-                <div class="stat-info">
-                  <h3>ACTIVE USERS</h3>
-                  <div class="stat-value">24,521</div>
-                  <span class="stat-change positive">
+              <div class="greenCurve">
+                <div class="stat-card-inner">
+                  <div class="stat-info">
+                    <h3>ACTIVE USERS</h3>
+                    <div class="stat-value">24,521</div>
+                    <span class="stat-change positive">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      </svg>
+                      +8.2%
+                    </span>
+                  </div>
+                  <div class="stat-icon users">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
+                      <circle cx="9" cy="7" r="4"/>
+                      <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
+                      <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                     </svg>
-                    +8.2%
-                  </span>
+                  </div>
                 </div>
-                <div class="stat-icon users">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
-                    <circle cx="9" cy="7" r="4"/>
-                    <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
-                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-                  </svg>
-                </div>
+                <svg class="greenCurve__wave" viewBox="0 0 1000 400" preserveAspectRatio="none" aria-hidden="true">
+                  <defs>
+                    <linearGradient id="gc-waveFill-2" x1="0" y1="0" x2="0" y2="1">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0;"/>
+                      <stop offset="55%" style="stop-color: var(--curve); stop-opacity: 0.10;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <linearGradient id="gc-waveLine-2" x1="0" y1="0" x2="1" y2="0">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0.35;"/>
+                      <stop offset="45%" style="stop-color: var(--curve); stop-opacity: 0.95;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <pattern id="gc-diag-2" width="14" height="14" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
+                      <rect x="0" y="0" width="6" height="14" style="fill: var(--curve); opacity: 1;"/>
+                    </pattern>
+                    <clipPath id="gc-waveClip-2">
+                      <path d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"/>
+                    </clipPath>
+                  </defs>
+                  <path class="greenCurve__fill"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"
+                        fill="url(#gc-waveFill-2)"/>
+                  <rect class="greenCurve__stripes"
+                        x="0" y="0" width="1000" height="400"
+                        fill="url(#gc-diag-2)"
+                        clip-path="url(#gc-waveClip-2)"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        stroke="url(#gc-waveLine-2)"
+                        stroke-width="8"
+                        stroke-linecap="round"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        style="stroke: var(--curve); stroke-opacity: 0.35;"
+                        stroke-width="14"
+                        stroke-linecap="round"/>
+                </svg>
               </div>
             </div>
             <div class="glass-card glass-card-3d stat-card">
-              <div class="stat-card-inner">
-                <div class="stat-info">
-                  <h3>TOTAL ORDERS</h3>
-                  <div class="stat-value">8,461</div>
-                  <span class="stat-change negative">
+              <div class="greenCurve">
+                <div class="stat-card-inner">
+                  <div class="stat-info">
+                    <h3>TOTAL ORDERS</h3>
+                    <div class="stat-value">8,461</div>
+                    <span class="stat-change negative">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M7 7l10 10"/><path d="M17 7H7v10"/>
+                      </svg>
+                      -3.1%
+                    </span>
+                  </div>
+                  <div class="stat-icon orders">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M7 7l10 10"/><path d="M17 7H7v10"/>
+                      <circle cx="9" cy="21" r="1"/>
+                      <circle cx="20" cy="21" r="1"/>
+                      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
                     </svg>
-                    -3.1%
-                  </span>
+                  </div>
                 </div>
-                <div class="stat-icon orders">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="9" cy="21" r="1"/>
-                    <circle cx="20" cy="21" r="1"/>
-                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
-                  </svg>
-                </div>
+                <svg class="greenCurve__wave" viewBox="0 0 1000 400" preserveAspectRatio="none" aria-hidden="true">
+                  <defs>
+                    <linearGradient id="gc-waveFill-3" x1="0" y1="0" x2="0" y2="1">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0;"/>
+                      <stop offset="55%" style="stop-color: var(--curve); stop-opacity: 0.10;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <linearGradient id="gc-waveLine-3" x1="0" y1="0" x2="1" y2="0">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0.35;"/>
+                      <stop offset="45%" style="stop-color: var(--curve); stop-opacity: 0.95;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <pattern id="gc-diag-3" width="14" height="14" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
+                      <rect x="0" y="0" width="6" height="14" style="fill: var(--curve); opacity: 1;"/>
+                    </pattern>
+                    <clipPath id="gc-waveClip-3">
+                      <path d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"/>
+                    </clipPath>
+                  </defs>
+                  <path class="greenCurve__fill"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"
+                        fill="url(#gc-waveFill-3)"/>
+                  <rect class="greenCurve__stripes"
+                        x="0" y="0" width="1000" height="400"
+                        fill="url(#gc-diag-3)"
+                        clip-path="url(#gc-waveClip-3)"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        stroke="url(#gc-waveLine-3)"
+                        stroke-width="8"
+                        stroke-linecap="round"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        style="stroke: var(--curve); stroke-opacity: 0.35;"
+                        stroke-width="14"
+                        stroke-linecap="round"/>
+                </svg>
               </div>
             </div>
             <div class="glass-card glass-card-3d stat-card">
-              <div class="stat-card-inner">
-                <div class="stat-info">
-                  <h3>CONVERSION RATE</h3>
-                  <div class="stat-value">324%</div>
-                  <span class="stat-change positive">
+              <div class="greenCurve">
+                <div class="stat-card-inner">
+                  <div class="stat-info">
+                    <h3>CONVERSION RATE</h3>
+                    <div class="stat-value">324%</div>
+                    <span class="stat-change positive">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      </svg>
+                      +2.4%
+                    </span>
+                  </div>
+                  <div class="stat-icon conversion">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
+                      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
                     </svg>
-                    +2.4%
-                  </span>
+                  </div>
                 </div>
-                <div class="stat-icon conversion">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
-                  </svg>
-                </div>
+                <svg class="greenCurve__wave" viewBox="0 0 1000 400" preserveAspectRatio="none" aria-hidden="true">
+                  <defs>
+                    <linearGradient id="gc-waveFill-4" x1="0" y1="0" x2="0" y2="1">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0;"/>
+                      <stop offset="55%" style="stop-color: var(--curve); stop-opacity: 0.10;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <linearGradient id="gc-waveLine-4" x1="0" y1="0" x2="1" y2="0">
+                      <stop offset="0%" style="stop-color: var(--curve); stop-opacity: 0.35;"/>
+                      <stop offset="45%" style="stop-color: var(--curve); stop-opacity: 0.95;"/>
+                      <stop offset="100%" style="stop-color: var(--curve); stop-opacity: 0.55;"/>
+                    </linearGradient>
+                    <pattern id="gc-diag-4" width="14" height="14" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
+                      <rect x="0" y="0" width="6" height="14" style="fill: var(--curve); opacity: 1;"/>
+                    </pattern>
+                    <clipPath id="gc-waveClip-4">
+                      <path d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"/>
+                    </clipPath>
+                  </defs>
+                  <path class="greenCurve__fill"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145 L 1000 400 L 0 400 Z"
+                        fill="url(#gc-waveFill-4)"/>
+                  <rect class="greenCurve__stripes"
+                        x="0" y="0" width="1000" height="400"
+                        fill="url(#gc-diag-4)"
+                        clip-path="url(#gc-waveClip-4)"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        stroke="url(#gc-waveLine-4)"
+                        stroke-width="8"
+                        stroke-linecap="round"/>
+                  <path class="greenCurve__line"
+                        d="M0 235 C 120 220 210 320 360 290 C 520 255 640 160 770 205 C 875 240 940 165 1000 145"
+                        fill="none"
+                        style="stroke: var(--curve); stroke-opacity: 0.35;"
+                        stroke-width="14"
+                        stroke-linecap="round"/>
+                </svg>
               </div>
             </div>
           </section>
