--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -39,15 +39,19 @@
       pointer-events: none;
       z-index: 0;
       background:
-        radial-gradient(1100px 800px at 12% 8%, rgba(124, 37, 239, 0.10), transparent 72%),
-        radial-gradient(950px 750px at 85% 12%, rgba(124, 37, 239, 0.08), transparent 74%),
-        radial-gradient(1000px 820px at 22% 45%, rgba(160, 120, 255, 0.07), transparent 76%),
-        radial-gradient(1200px 900px at 78% 48%, rgba(124, 37, 239, 0.06), transparent 78%),
-        radial-gradient(1050px 820px at 14% 78%, rgba(124, 37, 239, 0.06), transparent 80%),
-        radial-gradient(980px 780px at 88% 82%, rgba(160, 120, 255, 0.05), transparent 82%),
-        radial-gradient(900px 700px at 48% 90%, rgba(124, 37, 239, 0.05), transparent 84%),
+        radial-gradient(140px 140px at 12% 18%, rgba(255, 255, 255, 0.22), transparent 62%),
+        radial-gradient(220px 220px at 22% 38%, rgba(255, 255, 255, 0.18), transparent 64%),
+        radial-gradient(180px 180px at 36% 16%, rgba(255, 255, 255, 0.16), transparent 62%),
+        radial-gradient(260px 260px at 52% 32%, rgba(255, 255, 255, 0.14), transparent 65%),
+        radial-gradient(200px 200px at 68% 18%, rgba(255, 255, 255, 0.18), transparent 62%),
+        radial-gradient(260px 260px at 78% 40%, rgba(255, 255, 255, 0.15), transparent 66%),
+        radial-gradient(180px 180px at 86% 68%, rgba(255, 255, 255, 0.14), transparent 66%),
+        radial-gradient(240px 240px at 64% 78%, rgba(255, 255, 255, 0.16), transparent 64%),
+        radial-gradient(160px 160px at 40% 82%, rgba(255, 255, 255, 0.12), transparent 62%),
+        radial-gradient(200px 200px at 18% 74%, rgba(255, 255, 255, 0.14), transparent 64%),
         linear-gradient(180deg, var(--bg) 0%, var(--bg) 100%);
-      filter: blur(60px);
+      filter: blur(26px);
+      opacity: 0.95;
     }
 
     body.user-template-scope::after {
