Update dashboard background styling

--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -17,7 +17,7 @@
     }
 
     body.user-template-scope {
-      --bg: #05070a;
+      --bg: #0b1322;
       --panel: rgba(124, 37, 239, 0.10);
       --panel-border: rgba(124, 37, 239, 0.30);
       --shadow: 0 4px 30px rgba(0, 0, 0, 0.10);
@@ -43,35 +43,11 @@
       pointer-events: none;
       z-index: 0;
       background:
-        radial-gradient(140px 140px at calc(12% + var(--glow-shift-x)) calc(18% + var(--glow-shift-y)), rgba(255, 255, 255, 0.22), transparent 62%),
-        radial-gradient(220px 220px at calc(22% + var(--glow-shift-x-alt)) calc(38% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.18), transparent 64%),
-        radial-gradient(180px 180px at calc(36% + var(--glow-shift-x)) calc(16% + var(--glow-shift-y)), rgba(255, 255, 255, 0.16), transparent 62%),
-        radial-gradient(260px 260px at calc(52% + var(--glow-shift-x-alt)) calc(32% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.14), transparent 65%),
-        radial-gradient(200px 200px at calc(68% + var(--glow-shift-x)) calc(18% + var(--glow-shift-y)), rgba(255, 255, 255, 0.18), transparent 62%),
-        radial-gradient(260px 260px at calc(78% + var(--glow-shift-x-alt)) calc(40% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.15), transparent 66%),
-        radial-gradient(180px 180px at calc(86% + var(--glow-shift-x)) calc(68% + var(--glow-shift-y)), rgba(255, 255, 255, 0.14), transparent 66%),
-        radial-gradient(240px 240px at calc(64% + var(--glow-shift-x-alt)) calc(78% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.16), transparent 64%),
-        radial-gradient(160px 160px at calc(40% + var(--glow-shift-x)) calc(82% + var(--glow-shift-y)), rgba(255, 255, 255, 0.12), transparent 62%),
-        radial-gradient(200px 200px at calc(18% + var(--glow-shift-x-alt)) calc(74% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.14), transparent 64%),
-        radial-gradient(280px 280px at calc(10% + var(--glow-shift-x)) calc(60% + var(--glow-shift-y)), rgba(255, 255, 255, 0.12), transparent 66%),
-        radial-gradient(120px 120px at calc(90% + var(--glow-shift-x-alt)) calc(20% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.18), transparent 62%),
-        radial-gradient(420px 420px at calc(8% + var(--glow-shift-x)) calc(12% + var(--glow-shift-y)), rgba(255, 255, 255, 0.10), transparent 68%),
-        radial-gradient(460px 460px at calc(88% + var(--glow-shift-x-alt)) calc(28% + var(--glow-shift-y-alt)), rgba(255, 255, 255, 0.12), transparent 70%),
-        radial-gradient(520px 520px at calc(52% + var(--glow-shift-x)) calc(92% + var(--glow-shift-y)), rgba(255, 255, 255, 0.08), transparent 72%),
-        linear-gradient(180deg, var(--bg) 0%, var(--bg) 100%);
+        linear-gradient(140deg, rgba(120, 180, 255, 0.20) 0%, rgba(120, 180, 255, 0.0) 48%),
+        linear-gradient(220deg, rgba(100, 255, 215, 0.14) 0%, rgba(100, 255, 215, 0.0) 55%),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.10) 0%, rgba(255, 255, 255, 0.0) 42%),
+        linear-gradient(180deg, #0b1322 0%, #0a0f1a 100%);
       background-position:
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
-        0% 0%,
         0% 0%,
         0% 0%,
         0% 0%,
@@ -91,53 +67,17 @@
           0% 0%,
           0% 0%,
           0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
           0% 0%;
       }
       50% {
         background-position:
           6% -4%,
           -5% 8%,
-          3% -6%,
-          8% 4%,
-          -6% 6%,
-          5% -5%,
-          -4% 7%,
-          6% 5%,
-          -7% -4%,
-          4% 6%,
-          -6% -6%,
-          7% 3%,
-          -4% 6%,
-          5% -8%,
-          -3% -5%,
+          4% -6%,
           0% 0%;
       }
       100% {
         background-position:
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
-          0% 0%,
           0% 0%,
           0% 0%,
           0% 0%,
