Update search icon and notification badge

--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -708,10 +708,7 @@
         <h1 class="page-title">Bonjour, <span id="firstname"></span></h1>
         <div class="navbar-right">
           <div class="search-box">
-            <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="11" cy="11" r="8"/>
-              <line x1="21" y1="21" x2="16.65" y2="16.65"/>
-            </svg>
+            <i class="fas fa-search search-icon" aria-hidden="true"></i>
             <input type="text" class="search-input" placeholder="Rechercher...">
           </div>
           <div class="dropdown position-relative">
