--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -196,6 +196,53 @@
       box-shadow: none;
     }
 
+    body.user-template-scope .card-actions {
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+      padding: 6px;
+      border-radius: 999px;
+      border: 1px solid rgba(184, 254, 8, 0.25);
+      background: rgba(10, 18, 32, 0.55);
+      box-shadow: 0 12px 30px rgba(8, 14, 28, 0.45);
+    }
+
+    body.user-template-scope .card-btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      min-width: 88px;
+      padding: 10px 18px;
+      border-radius: 999px;
+      border: 1px solid transparent;
+      background: linear-gradient(150deg, rgba(184, 254, 8, 0.12), rgba(124, 37, 239, 0.10));
+      color: var(--text);
+      font-weight: 600;
+      letter-spacing: 0.2px;
+      text-transform: uppercase;
+      font-size: 12px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease, background 0.2s ease;
+    }
+
+    body.user-template-scope .card-btn:hover {
+      transform: translateY(-1px);
+      border-color: rgba(184, 254, 8, 0.6);
+      box-shadow: 0 12px 20px rgba(184, 254, 8, 0.18);
+    }
+
+    body.user-template-scope .card-btn:focus-visible {
+      outline: 2px solid rgba(184, 254, 8, 0.8);
+      outline-offset: 2px;
+    }
+
+    body.user-template-scope .card-btn.active {
+      background: linear-gradient(150deg, rgba(184, 254, 8, 0.85), rgba(124, 37, 239, 0.35));
+      color: #0b1322;
+      border-color: rgba(184, 254, 8, 0.75);
+      box-shadow: 0 14px 28px rgba(184, 254, 8, 0.35);
+    }
+
     body.user-template-scope .table th,
     body.user-template-scope .table td,
     body.user-template-scope .data-table th,
