--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -215,8 +215,9 @@
       min-width: 88px;
       padding: 10px 18px;
       border-radius: 999px;
-      border: 1px solid transparent;
+      border: 1px solid var(--panel-border);
       background: linear-gradient(150deg, rgba(184, 254, 8, 0.12), rgba(124, 37, 239, 0.10));
+      background-clip: padding-box;
       color: var(--text);
       font-weight: 600;
       letter-spacing: 0.2px;
