Update revenue analytics buttons

--- a/the template/index.html
+++ b/the template/index.html
@@ -233,10 +233,10 @@ https://templatemo.com/tm-607-glass-admin
                             <h2 class="card-title">Revenue Analytics</h2>
                             <p class="card-subtitle">Monthly revenue overview</p>
                         </div>
-                        <div class="card-actions">
-                            <button class="card-btn active">Monthly</button>
-                            <button class="card-btn">Weekly</button>
-                            <button class="card-btn">Daily</button>
+                        <div class="chart-actions">
+                            <button class="chart-actions__btn is-active">Overview</button>
+                            <button class="chart-actions__btn">Trends</button>
+                            <button class="chart-actions__btn">Forecast</button>
                         </div>
                     </div>
                     <div class="chart-wrapper">
