--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -225,10 +225,18 @@
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
     }
 
+    body.user-template-scope .insight-toggle.interval-toggle {
+      border-color: #B8FE08;
+    }
+
     body.user-template-scope .insight-toggle:hover {
       transform: translateY(-1px);
       border-color: rgba(110, 224, 255, 0.7);
       box-shadow: 0 12px 18px rgba(66, 148, 255, 0.25);
+    }
+
+    body.user-template-scope .insight-toggle.interval-toggle:hover {
+      border-color: rgba(184, 254, 8, 0.85);
     }
 
     body.user-template-scope .insight-toggle:focus-visible {
@@ -241,6 +249,11 @@
       color: #0b1322;
       border-color: rgba(110, 224, 255, 0.9);
       box-shadow: 0 14px 26px rgba(66, 148, 255, 0.35);
+    }
+
+    body.user-template-scope .insight-toggle.interval-toggle.active {
+      border-color: #B8FE08;
+      box-shadow: 0 14px 26px rgba(184, 254, 8, 0.28);
     }
 
     body.user-template-scope .table th,
@@ -1075,9 +1088,9 @@
                   <p class="card-subtitle">Monthly revenue overview</p>
                 </div>
                 <div class="card-actions">
-                  <button class="insight-toggle active">Overview</button>
-                  <button class="insight-toggle">Performance</button>
-                  <button class="insight-toggle">Forecast</button>
+                  <button class="insight-toggle interval-toggle active">Monthly</button>
+                  <button class="insight-toggle interval-toggle">Weekly</button>
+                  <button class="insight-toggle interval-toggle">Daily</button>
                 </div>
               </div>
               <div class="chart-wrapper">
