--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -213,30 +213,41 @@
       justify-content: center;
       gap: 6px;
       min-width: 96px;
-      padding: 10px 20px;
-      border-radius: 14px;
-      border: 1px solid rgba(110, 224, 255, 0.35);
-      background: linear-gradient(135deg, rgba(18, 32, 58, 0.85), rgba(37, 54, 96, 0.65));
-      color: #e5f6ff;
+      padding: 10px 24px;
+      border-radius: 999px;
+      border-width: 1px;
+      border-style: solid;
+      border-color: rgba(255, 255, 255, 0.35);
+      background: linear-gradient(135deg, rgba(34, 80, 118, 0.55), rgba(18, 44, 72, 0.25));
+      color: #e9f7ff;
       font-weight: 600;
       letter-spacing: 0.3px;
       text-transform: uppercase;
       font-size: 11px;
-      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      box-shadow:
+        inset 0 1px 0 rgba(255, 255, 255, 0.45),
+        inset 0 -1px 6px rgba(0, 0, 0, 0.3),
+        0 12px 24px rgba(4, 18, 36, 0.35);
+      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease,
+        background 0.2s ease;
     }
 
     body.user-template-scope .insight-toggle.interval-toggle {
-      border-color: #B8FE08;
+      border-color: rgba(184, 254, 8, 0.6);
     }
 
     body.user-template-scope .insight-toggle:hover {
       transform: translateY(-1px);
-      border-color: rgba(110, 224, 255, 0.7);
-      box-shadow: 0 12px 18px rgba(66, 148, 255, 0.25);
+      border-color: rgba(255, 255, 255, 0.7);
+      box-shadow:
+        inset 0 1px 0 rgba(255, 255, 255, 0.6),
+        0 14px 26px rgba(66, 148, 255, 0.28);
     }
 
     body.user-template-scope .insight-toggle.interval-toggle:hover {
-      border-color: rgba(184, 254, 8, 0.85);
+      border-color: rgba(184, 254, 8, 0.95);
     }
 
     body.user-template-scope .insight-toggle:focus-visible {
@@ -245,15 +256,19 @@
     }
 
     body.user-template-scope .insight-toggle.active {
-      background: linear-gradient(135deg, rgba(110, 224, 255, 0.85), rgba(85, 133, 255, 0.8));
+      background: linear-gradient(135deg, rgba(148, 233, 255, 0.8), rgba(92, 160, 255, 0.75));
       color: #0b1322;
-      border-color: rgba(110, 224, 255, 0.9);
-      box-shadow: 0 14px 26px rgba(66, 148, 255, 0.35);
+      border-color: rgba(255, 255, 255, 0.8);
+      box-shadow:
+        inset 0 1px 0 rgba(255, 255, 255, 0.7),
+        0 16px 28px rgba(66, 148, 255, 0.4);
     }
 
     body.user-template-scope .insight-toggle.interval-toggle.active {
-      border-color: #B8FE08;
-      box-shadow: 0 14px 26px rgba(184, 254, 8, 0.28);
+      border-color: rgba(184, 254, 8, 0.9);
+      box-shadow:
+        inset 0 1px 0 rgba(255, 255, 255, 0.7),
+        0 14px 26px rgba(184, 254, 8, 0.28);
     }
 
     body.user-template-scope .table th,
