Add glassy stats button to revenue analytics

--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -496,10 +496,13 @@
 
           <section class="content-grid">
             <div class="glass-card chart-card">
-              <div class="card-header">
-                <div>
-                  <h2 class="card-title">Revenue Analytics</h2>
-                  <p class="card-subtitle">Monthly revenue overview</p>
+              <div class="card-header revenue-analytics-header">
+                <div class="revenue-header-left">
+                  <button class="glassy-btn" type="button">Stats</button>
+                  <div>
+                    <h2 class="card-title">Revenue Analytics</h2>
+                    <p class="card-subtitle">Monthly revenue overview</p>
+                  </div>
                 </div>
               </div>
               <div class="chart-wrapper">
