Update dashboard period buttons

--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -498,11 +498,15 @@
             <div class="glass-card chart-card">
               <div class="card-header revenue-analytics-header">
                 <div class="revenue-header-left">
-                  <button class="glassy-btn" type="button">Stats</button>
                   <div>
                     <h2 class="card-title">Revenue Analytics</h2>
                     <p class="card-subtitle">Monthly revenue overview</p>
                   </div>
+                </div>
+                <div class="period-button-group">
+                  <button class="glassy-btn" type="button">Monthly</button>
+                  <button class="glassy-btn" type="button">Weekly</button>
+                  <button class="glassy-btn" type="button">Daily</button>
                 </div>
               </div>
               <div class="chart-wrapper">
