--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -256,18 +256,14 @@
               <div class="greenCurve">
                 <div class="stat-card-inner">
                   <div class="stat-info">
-                    <h3>TOTAL REVENUE</h3>
-                    <div class="stat-value">$84,254</div>
-                    <span class="stat-change positive">
-                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
-                      </svg>
-                      +12.5%
-                    </span>
+                    <h3>Solde total</h3>
+                    <div class="stat-value" id="soldeTotal">$0.00</div>
                   </div>
-                  <div class="stat-icon revenue">
+                  <div class="stat-icon revenue" aria-hidden="true">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M12 1v22"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+                      <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7"/>
+                      <path d="M7 12l5 5 5-5"/>
+                      <path d="M12 17V3"/>
                     </svg>
                   </div>
                 </div>
@@ -316,21 +312,14 @@
               <div class="greenCurve">
                 <div class="stat-card-inner">
                   <div class="stat-info">
-                    <h3>ACTIVE USERS</h3>
-                    <div class="stat-value">24,521</div>
-                    <span class="stat-change positive">
-                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
-                      </svg>
-                      +8.2%
-                    </span>
+                    <h3>Total Dépôts</h3>
+                    <div class="stat-value" id="totalDepots">$0.00</div>
                   </div>
-                  <div class="stat-icon users">
+                  <div class="stat-icon users" aria-hidden="true">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
-                      <circle cx="9" cy="7" r="4"/>
-                      <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
-                      <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                      <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7"/>
+                      <path d="M7 8l5-5 5 5"/>
+                      <path d="M12 3v14"/>
                     </svg>
                   </div>
                 </div>
@@ -375,24 +364,17 @@
                 </svg>
               </div>
             </div>
-            <div class="glass-card glass-card-3d stat-card">
+            <div class="glass-card glass-card-3d stat-card" id="profit-box">
               <div class="greenCurve">
                 <div class="stat-card-inner">
                   <div class="stat-info">
-                    <h3>TOTAL ORDERS</h3>
-                    <div class="stat-value">8,461</div>
-                    <span class="stat-change negative">
-                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M7 7l10 10"/><path d="M17 7H7v10"/>
-                      </svg>
-                      -3.1%
-                    </span>
+                    <h3>Profit</h3>
+                    <div class="stat-value" id="profit">$0.00</div>
                   </div>
-                  <div class="stat-icon orders">
+                  <div class="stat-icon orders" aria-hidden="true">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <circle cx="9" cy="21" r="1"/>
-                      <circle cx="20" cy="21" r="1"/>
-                      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+                      <path d="M3 17l6-6 4 4 7-7"/>
+                      <path d="M21 10V4h-6"/>
                     </svg>
                   </div>
                 </div>
@@ -441,18 +423,15 @@
               <div class="greenCurve">
                 <div class="stat-card-inner">
                   <div class="stat-info">
-                    <h3>CONVERSION RATE</h3>
-                    <div class="stat-value">324%</div>
-                    <span class="stat-change positive">
-                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M7 17l10-10"/><path d="M7 7h10v10"/>
-                      </svg>
-                      +2.4%
-                    </span>
+                    <h3>Nombre de transactions</h3>
+                    <div class="stat-value" id="nbTransactions">0</div>
                   </div>
-                  <div class="stat-icon conversion">
+                  <div class="stat-icon conversion" aria-hidden="true">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
+                      <path d="M4 7h16"/>
+                      <path d="M4 12h10"/>
+                      <path d="M4 17h16"/>
+                      <circle cx="18" cy="12" r="2"/>
                     </svg>
                   </div>
                 </div>
