--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -209,7 +209,7 @@
               </li>
               <li><hr class="dropdown-divider"/></li>
               <li class="text-center">
-                <a class="dropdown-item small" href="#" id="notificationsViewAll">Afficher toutes les notifications</a>
+                <a class="dropdown-item small" href="#" id="notificationsViewAll"><i class="fas fa-layer-group me-2"></i>Afficher toutes les notifications</a>
               </li>
             </ul>
           </div>
