Add revenue analytics data endpoint and UI controls

--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -483,13 +483,13 @@
                 <div class="revenue-header-left">
                   <div>
                     <h2 class="card-title">Revenue Analytics</h2>
-                    <p class="card-subtitle">Monthly revenue overview</p>
+                    <p class="card-subtitle" id="revenueSubtitle">Monthly revenue overview</p>
                   </div>
                 </div>
                 <div class="period-button-group">
-                  <button class="glassy-btn" type="button">Monthly</button>
-                  <button class="glassy-btn" type="button">Weekly</button>
-                  <button class="glassy-btn" type="button">Daily</button>
+                  <button class="glassy-btn is-active" type="button" data-period="monthly">Monthly</button>
+                  <button class="glassy-btn" type="button" data-period="weekly">Weekly</button>
+                  <button class="glassy-btn" type="button" data-period="daily">Daily</button>
                 </div>
               </div>
               <div class="chart-wrapper">
